--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en" ng-app="doodlesApp">
 <head>
   <meta charset="UTF-8">
-  <title>Visualize</title>
-  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <title>Doodlez</title>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Amatic+SC|Special+Elite' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
 <body>
-  <header><h1>DOODLEZ</h1></header>
-  <hr>
-  <button id="login">Log In</button>
+
+  <ng-view></ng-view>
+
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+  <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
