added logs page and logout

--- a/logs.html
+++ b/logs.html
@@ -1,13 +1,10 @@
-<h2 class="draw_logo">Doodlez</h2>
+<h2 class="draw_logo">Doodlez Log</h2>
 <div class="draw_wrap">
   <h2 class="draw_nav" onclick="window.location.href='#/logout'">Logout</h2> 
-  <h2 class="draw_nav" onclick="window.location.href='#/logs'">Past Doodlez</h2>
+  <h2 class="draw_nav" onclick="window.location.href='#/draw'">New Doodlez</h2>
 </div>
 
 <div class="canvas_wrap">
   <canvas class="write_canvas"></canvas>
   <canvas class="draw_canvas"></canvas> 
-</div>
-<div>
-  <button class="button save_draw">Save Doodle</button>
 </div>
