added login form

--- a/login.html
+++ b/login.html
@@ -1,5 +1,9 @@
 <div class="login_box">
   <header><h1>Doodlez</h1></header>
   <hr>
+  <div class="login_info">
+    <span class="login_text">ID:</span><input type="text" placeholder="username"><br>
+    <span class="login_text">Password:</span><input type="text" placeholder="password">
+  </div>
   <button class="button" onclick="window.location.href='#/draw'">Start Doodling</button>
 </div>
