--- a/draw.html
+++ b/draw.html
@@ -5,6 +5,10 @@
 </div>
 
 <div class="canvas_wrap">
+  <div class="title_wrap">
+    <h3 class="draw_titles"> Notepad</h3>
+    <h3 class="draw_titles">Sketchpad</h3>
+  </div>
   <canvas class="write_canvas"></canvas>
   <canvas class="draw_canvas"></canvas> 
 </div>
