--- a/logs.html
+++ b/logs.html
@@ -5,6 +5,13 @@
 </div>
 
 <div class="canvas_wrap">
+  <div class="title_wrap">
+    <h3 class="draw_titles">Comments</h3>
+    <h3 class="draw_titles"> Sketches</h3>
+  </div>
   <canvas class="write_canvas"></canvas>
   <canvas class="draw_canvas"></canvas> 
+</div>
+<div>
+  <button class="button save_draw">Save Doodle</button>
 </div>
